fix(ui5-rating-indicator): outline border is visible

--- a/packages/main/src/themes/RatingIndicator.css
+++ b/packages/main/src/themes/RatingIndicator.css
@@ -3,6 +3,7 @@
 	font-size: 24px;
 	margin: var(--_ui5_rating_indicator_component_spacing);
 	cursor: pointer;
+	padding: var(--_ui5_rating_indicator_component_padding);
 }
 
 :host([disabled]) {
